--- a/Formattingtags.html
+++ b/Formattingtags.html
@@ -20,6 +20,8 @@
     <p>This paragraph<br>has a line break.</p>
     
     <hr>
+
+    <!-- horizontal line-->
     
     <p>This is another paragraph.</p>
 
