--- a/Html_basics.html
+++ b/Html_basics.html
@@ -42,8 +42,8 @@ follow: Instructs crawlers to follow the links on this page to other pages.
 Indexing is the process by which search engines, like Google or Bing, analyze and store information about web pages to make them retrievable in search results. When a search engine indexes a page, it adds the page to its vast database (index) so it can quickly retrieve it when a user searches for relevant terms.-->
         <meta name="author" content="Keerthana">
         <!-- to display author of webpage -->
-        <meta http-equiv="refresh" content="5;">
-        <!-- to  trigger the refresh of page every 5 sec-->
+        <meta http-equiv="refresh" content="5;url=http://example.com/">
+        <!-- to  trigger the refresh of page every 5 sec and move to new page-->
         <title>HTML Basics</title>
         <!--
         
